backend_node_app/kubernetes/01_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-mongo-api-deployment
spec:
  replicas: 4
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: node-mongo-api
  template:
    metadata:
      labels:
        app: node-mongo-api
    spec:
      containers:
      - name: node-mongo-api       
        image: theaggarwal/node-mongo-api:v9  # to pick from ACR >sacontainerregistry.azurecr.io/saapp:v1
        #image: sacontainerregistry.azurecr.io/node-mongo-api:v7
        ports:
        - containerPort: 3000
