backend_node_app/kubernetes/02_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-mongo-api-service
spec:
  type: NodePort
  selector:
    app: node-mongo-api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
    nodePort: 32000
