backend_node_app/kubernetes/03_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2 # to preserve the subpath after /api. otherwise if '/' is used any request to /api/... is being rewritten to / ie.. /api/users or /api/dummy-user to be stripped down to /.
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: node-mongo-api-service
            port:
              number: 3000
